--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
 		"jest": true
 	},
 	"rules": {
+		"no-underscore-dangle": 0,
 		"react/prefer-stateless-function": 0,
 		"arrow-body-style": 0,
 		"jsx-a11y/label-has-associated-control": 0,
