--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "private": true,
     "dependencies": {
         "axios": "^0.21.1",
-        "bootstrap": "^5.0.0-beta3",
+        "bootstrap": "^5.0.1",
         "jwt-decode": "^3.1.2",
         "react": "^17.0.1",
         "react-bootstrap": "^1.5.2",
+        "react-checkbox-tree": "^1.7.1",
         "react-dom": "^17.0.1",
+        "react-helmet": "^6.1.0",
         "react-redux": "^7.2.3",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
